--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <ul>
         <li><a href="./recipes/protein_shake.html">Protein Shake</a></li>
         <li><a href="./recipes/pb&j.html">PB&J</a></li>
-        
+        <li><a href="./recipes/cheesy_eggs.html">Cheesy Eggs</a></li>
     </ul>
 </body>
 </html>
