Update cheesy eggs ingredients

--- a/recipes/cheesy_eggs.html
+++ b/recipes/cheesy_eggs.html
@@ -19,7 +19,7 @@
         <li>4 eggs</li>
         <li>1/4 tablespoon salt</li>
         <li>pinch freshh ground pepper</li>
-        <li>1/4 cup cheese</li>
+        <li>1/4 of cup cheese</li>
     </ul>
     <h2>Steps</h2>
     <ol>
