Link CSS files to HTML files

--- a/index.html
+++ b/index.html
@@ -4,13 +4,14 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Odin Recipes</title>
+    <link rel="stylesheet" href="css/index-style.css">
 </head>
 <body>
     <h1>Odin Recipes</h1>
     <ul>
-        <li><a href="./recipes/protein_shake.html">Protein Shake</a></li>
-        <li><a href="./recipes/pb&j.html">PB&J</a></li>
-        <li><a href="./recipes/cheesy_eggs.html">Cheesy Eggs</a></li>
+        <li class="list-item"><a href="./recipes/protein_shake.html">Protein Shake</a></li>
+        <li class="list-item"><a href="./recipes/pb&j.html">PB&J</a></li>
+        <li class="list-item"><a href="./recipes/cheesy_eggs.html">Cheesy Eggs</a></li>
     </ul>
 </body>
 </html>
