Change list item classes

--- a/index.html
+++ b/index.html
@@ -9,9 +9,9 @@
 <body>
     <h1>Odin Recipes</h1>
     <ul>
-        <li class="list-item"><a href="./recipes/protein_shake.html">Protein Shake</a></li>
-        <li class="list-item"><a href="./recipes/pb&j.html">PB&J</a></li>
-        <li class="list-item"><a href="./recipes/cheesy_eggs.html">Cheesy Eggs</a></li>
+        <li class="list-item1"><a href="./recipes/protein_shake.html">Protein Shake</a></li>
+        <li class="list-item2"><a href="./recipes/pb&j.html">PB&J</a></li>
+        <li class="list-item3"><a href="./recipes/cheesy_eggs.html">Cheesy Eggs</a></li>
     </ul>
 </body>
 </html>
